[OneLogin Flutter Demo] [更新 Android SDK 到 2.3.1.3 版本，demo 集成示例适配更新]

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,5 +71,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //OneLogin
-    implementation 'com.geetest:onelogin:0.8.0'
+    implementation 'com.geetest.android:onelogin:2.3.1.3'
 }
